Install npm and repair a broken style on the home page

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -15,7 +15,6 @@
   position: absolute;
   flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
   top: 5rem;
   background-color: #16c782;
   height: 10rem;
@@ -40,7 +39,6 @@ a.isActive {
   font-size: 16px;
   line-height: 20px;
 }
-
 .homeContainer h2 {
   width: 95%;
   font-weight: bold;
@@ -48,7 +46,6 @@ a.isActive {
   line-height: 32px;
   letter-spacing: 0.2px;
 }
-
 .homeProdDisplay {
   background: #f6f6f6;
   border-radius: 30px 30px 0px 0px;
@@ -63,7 +60,6 @@ a.isActive {
   padding: 0 0 0 20%;
   width: 100%
 }
-
 .homeProdDisplay .category::-webkit-scrollbar {
   width: 0px;
 }
@@ -71,8 +67,6 @@ a.isActive {
   margin-top: 32px;
   list-style: none;
   padding: 2px 5%;
- 
-  /* margin: 10px; */
   color: #7f7f7f;
   font-size: 14px;
   cursor: pointer;
@@ -87,11 +81,9 @@ a.isActive {
   display: flex;
   overflow-x: scroll;
 }
-
 .homeProdDisplay .prodContainer::-webkit-scrollbar {
   width: 0px;
 }
-
 .homeProdDisplay .prodList {
   margin-top: 20px;
   display: flex;
@@ -102,7 +94,6 @@ a.isActive {
   background-color: #ffffff;
   border-radius: 10px;
 }
-
 .homeProdDisplay .prodList h2 {
   font-weight: 700;
   font-size: 16px;
@@ -111,7 +102,6 @@ a.isActive {
   width: 250px;
   height: auto;
 }
-
 .homeProdDisplay .shopNow {
   margin: 20px 0;
 }
@@ -119,7 +109,6 @@ a.isActive {
   text-decoration: none;
   color: #16c782;
 }
-
 .homeProdDisplay img {
   height: 117px;
   width: 130px;
@@ -130,7 +119,6 @@ a.isActive {
   justify-content: space-between;
   font-size: 16px;
 }
-
 .homeProdDisplay .featured a {
   text-decoration: none;
   color: #7f7f7f;
@@ -139,7 +127,6 @@ a.isActive {
   display: flex;
   overflow-x: scroll;
 }
-
 .homeProdDisplay .featuredContainer::-webkit-scrollbar {
   width: 0px;
 }
@@ -168,9 +155,7 @@ a.isActive {
   }
 
   .homeProdDisplay .featuredContainer {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    margin-left: 5rem;
   }
   .homeProdDisplay .featuredContainer span{
     margin: 30px 0 0 5%
